[gd_scene load_steps=4 format=3 uid="uid://bhomak2a60ydy"]

[ext_resource type="Script" path="res://Dev/pokemon_visualizer.gd" id="1_aaawa"]
[ext_resource type="PackedScene" uid="uid://bnknnowgqw2d3" path="res://Dev/stat_bar.tscn" id="2_6bmtl"]
[ext_resource type="Texture2D" uid="uid://depwj82ws4fwt" path="res://Graphics/Pokemon/Icons/000.png" id="3_qs7ym"]

[node name="PokemonVisualizer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1920.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aaawa")
pokemon_id = "FUECOCO"
metadata/_edit_lock_ = true

[node name="Sprite" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 192)
layout_mode = 2
offset_right = 192.0
offset_bottom = 192.0
expand_mode = 1
stretch_mode = 4
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="SpriteTimer" type="Timer" parent="Sprite"]
unique_name_in_owner = true
autostart = true

[node name="Stats" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 192.0
offset_right = 512.0
offset_bottom = 164.0
size_flags_horizontal = 10
metadata/_edit_group_ = true

[node name="HP" parent="Stats" instance=ExtResource("2_6bmtl")]
layout_mode = 2
text = "HP: %s"

[node name="ATTACK" parent="Stats" instance=ExtResource("2_6bmtl")]
layout_mode = 2
text = "ATTACK: %s"

[node name="DEFENSE" parent="Stats" instance=ExtResource("2_6bmtl")]
layout_mode = 2
text = "DEFENSE: %s"

[node name="SPECIAL_ATTACK" parent="Stats" instance=ExtResource("2_6bmtl")]
layout_mode = 2
text = "SPECIAL ATTACK: %s"

[node name="SPECIAL_DEFENSE" parent="Stats" instance=ExtResource("2_6bmtl")]
layout_mode = 2
text = "SPEICAL DEFENSE: %s"

[node name="SPEED" parent="Stats" instance=ExtResource("2_6bmtl")]
layout_mode = 2
text = "SPEED: %s"

[node name="Icon" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 192)
texture = ExtResource("3_qs7ym")
centered = false
hframes = 2
frame = 1
metadata/_edit_lock_ = true

[node name="IconShiny" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(64, 192)
texture = ExtResource("3_qs7ym")
centered = false
hframes = 2
frame = 1
metadata/_edit_lock_ = true

[node name="Moves" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 256.0
offset_right = 192.0
offset_bottom = 448.0

[node name="Label" type="Label" parent="Moves"]
layout_mode = 2
text = "
"

[node name="TutorMoves" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 200.0
offset_top = 256.0
offset_right = 352.0
offset_bottom = 448.0

[node name="Label" type="Label" parent="TutorMoves"]
layout_mode = 2
text = "
"

[node name="EggMoves" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 360.0
offset_top = 256.0
offset_right = 512.0
offset_bottom = 448.0

[node name="Label" type="Label" parent="EggMoves"]
layout_mode = 2
text = "
"
